deploy/components/oauth-proxy/hide-frontend-route.yaml
$patch: delete
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: packmate-frontend
